[workspace]
members = [
    "wpilib-nativeutils", 
    "wpilib-nativeutils-tester", 
    "wpihal-sys",
    "wpiutil",
    "wpiutil-sys",
    "build-test"
, "ntcore-sys"]
package.version = "0.2027.0-0-alpha-1"
package.license = "MIT OR Apache-2.0"
package.authors = ["guineawheek <guineawheek@gmail.com>"]
package.repository = "https://github.com/guineawheek/wpihal-rs"

[package]
name = "wpihal"
description = "Rust bindings for the WPILib HAL"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition = "2024"

[dependencies]
wpihal-sys = { path = "./wpihal-sys" }
wpiutil = { path = "./wpiutil"}
