[package]
name = "wpihal-sys"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition = "2021"

[features]
default = ["shared"]
static = []
shared = []

[build-dependencies]
wpilib-nativeutils = { path = "../wpilib-nativeutils" }
bindgen = "0.70.1"

[dependencies]
