[package]
name = "wpilib-nativeutils"
edition = "2021"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Utility to pull down Maven artifacts from the WPILib Artifactory"

[dependencies]
anyhow = "1.0.93"
home = "0.5.9"
reqwest = { version = "0.12.9", features = ["blocking"] }
zip = "2.2.0"
